# ImageEcho_v2

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  benchmark_report.md  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ENGINES.md
gui/: __init__.py  benchmark_panel.py  heatmap_panel.py  main_window.py  settings_panel.py
imageecho/: base_engine.py  cli.py  context.py  surrogate.py
imageecho/engines/: __init__.py  autopgd.py  cw.py  dct.py  deepfool.py  fgsm.py  gaussian.py  jsma.py  lsb.py  patch.py  pgd.py
tests/: conftest.py  test_context.py  test_engines.py  test_surrogate.py
