[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "imageecho"
version = "0.1.0"
description = "Adversarial Machine Learning through invisible pixel perturbation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

[project.scripts]
imageecho = "imageecho.cli:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
