[project]
name = 'imageecho'
version = '1.0.0'
description = 'Adversarial engine and watermarking framework'
dependencies = [
    'numpy',
    'pillow',
    'scipy',
    'scikit-image',
    'torch',
    'torchvision',
    'rich',
    'tqdm'
]

[tool.pytest.ini_options]
testpaths = ['tests']
python_files = ['test_*.py']
